modify to create windows installer with jlink and WiX tools instead of javapackager.